Media Controls: Hide loading panel on play

If the media starts playing whilst the loading panel is either showing
or cooling down we should hide it immediately as we are obscuring the
video.

BUG=827482

Change-Id: Ie0fb8159469fcc6740f624d052ac4b176f4f6876
Reviewed-on: https://chromium-review.googlesource.com/990192
Commit-Queue: Becca Hughes <beccahughes@chromium.org>
Reviewed-by: Tommy Steimel <steimel@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#547791}
Former-commit-id: 5bb7408267a06daa2fb6c9fdc445e36ce10242ca