third_party/WebKit/Source/modules/media_controls/elements/MediaControlLoadingPanelElementTest.cpp
@@ -115,13 +115,8 @@ class MediaControlLoadingPanelElementTest : public PageTestBase {
     ExpectAnimationIterationInfinite();
 
     // Transition the media controls to a playing state and expect the loading
-    // panel to start cooling down.
+    // panel to hide immediately.
     SimulatePlaying();
-    ExpectStateIsCoolingDown();
-    ExpectAnimationIterationCount("4");
-
-    // Simulate the animations ending.
-    SimulateAnimationEnd();
 
     // Make sure the loading panel is hidden now.
     ExpectStateIsHidden();
@@ -218,7 +213,6 @@ TEST_F(MediaControlLoadingPanelElementTest, Reset_DuringCycle) {
 
   // Now move to playing.
   SimulatePlaying();
-  SimulateAnimationEnd();
   ExpectStateIsHidden();
 }
 
